# sync-blocked-email-domains

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sync_blocklist.py
.github/workflows/: docker-build.yml  docker-rebuild.yml
examples/: docker-compose.yml  kubernetes-cronjob.yaml
sync_blocked_email_domains/: __init__.py  main.py
